# soko-mcp

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  glama.json  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml  publish.yml
ci/: README.md  publish.yml
src/soko_mcp/: __init__.py  main.py
