[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soko-mcp"
version = "0.1.0"
description = "MCP server for East Africa commodity price intelligence and market signals"
authors = [{name = "Gabriel Mahia", email = "contact@aikungfu.dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["mcp", "commodity", "kenya", "africa", "markets", "prices", "agriculture", "soko"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]
dependencies = ["fastmcp>=2.0.0"]

[project.urls]
Homepage = "https://github.com/gabrielmahia/soko-mcp"
Repository = "https://github.com/gabrielmahia/soko-mcp"
Issues = "https://github.com/gabrielmahia/soko-mcp/issues"

[project.scripts]
soko-mcp = "soko_mcp.main:main"

[tool.setuptools.packages.find]
where = ["src"]
